#116 Loading and displaying achievements

--- a/src/main/resources/themes/default/user_info_window.fxml
+++ b/src/main/resources/themes/default/user_info_window.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.ToggleButton?>
@@ -17,16 +18,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="userInfoRoot" minHeight="256.0" minWidth="256.0"
-          xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.chat.UserInfoWindowController">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="userInfoRoot" minHeight="256.0" minWidth="256.0" prefHeight="700.0"
+          prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.40"
+          fx:controller="com.faforever.client.chat.UserInfoWindowController">
   <columnConstraints>
     <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" vgrow="NEVER"/>
-    <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+    <RowConstraints vgrow="NEVER"/>
+    <RowConstraints vgrow="NEVER"/>
     <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
   </rowConstraints>
   <children>
@@ -46,7 +48,7 @@
     </Label>
     <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
       <tabs>
-        <Tab text="%playerInfo.ratingOverTime">
+        <Tab closable="false" text="%userInfo.ratingOverTime">
           <content>
             <VBox>
               <children>
@@ -54,18 +56,17 @@
                   <children>
                     <ToggleButton fx:id="ratingOver90DaysButton" mnemonicParsing="false"
                                   onAction="#onRatingOver90DaysButtonClicked" selected="true"
-                                  text="%playerInfo.ratingOverTime.last3Months">
+                                  text="%userInfo.ratingOverTime.last3Months">
                       <toggleGroup>
                         <ToggleGroup fx:id="timeRange"/>
                       </toggleGroup>
                     </ToggleButton>
                     <ToggleButton fx:id="ratingOver365DaysButton" mnemonicParsing="false"
-                                  onAction="#onRatingOver365DaysButtonClicked"
-                                  text="%playerInfo.ratingOverTime.lastYear" toggleGroup="$timeRange"/>
+                                  onAction="#onRatingOver365DaysButtonClicked" text="%userInfo.ratingOverTime.lastYear"
+                                  toggleGroup="$timeRange"/>
                   </children>
                 </HBox>
-                <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false"
-                           VBox.vgrow="ALWAYS">
+                <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false" VBox.vgrow="ALWAYS">
                   <xAxis>
                     <NumberAxis fx:id="rating90DaysXAxis" side="BOTTOM"/>
                   </xAxis>
@@ -75,6 +76,38 @@
                 </LineChart>
               </children>
             </VBox>
+          </content>
+        </Tab>
+        <Tab closable="false" text="%userInfo.achievements">
+          <content>
+            <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER">
+              <content>
+                <VBox fx:id="achievementsLayout" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                      spacing="10.0">
+                  <children>
+                    <Label fx:id="notUsingClientLabel" maxHeight="1.7976931348623157E308"
+                           text="%userInfo.notUsingClient" wrapText="true"/>
+                    <VBox fx:id="noAchievementsLayout" alignment="CENTER" spacing="20.0" VBox.vgrow="ALWAYS">
+                      <children>
+                        <Label fx:id="connectToGoogleLabel" maxHeight="1.7976931348623157E308"
+                               text="%userInfo.googleConnectionRequired" wrapText="true"/>
+                        <Button fx:id="connectToGoogleButton" focusTraversable="false" graphicTextGap="12.0"
+                                mnemonicParsing="false" onAction="#onConnectToGoogleButtonClicked"
+                                text="%currentUser.connectGoogle">
+                          <graphic>
+                            <ImageView fitHeight="36.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                <Image url="@images/google+.png"/>
+                              </image>
+                            </ImageView>
+                          </graphic>
+                        </Button>
+                      </children>
+                    </VBox>
+                  </children>
+                </VBox>
+              </content>
+            </ScrollPane>
           </content>
         </Tab>
       </tabs>
