--- a/src/main/resources/themes/default/user_info_window.fxml
+++ b/src/main/resources/themes/default/user_info_window.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -18,32 +25,30 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="userInfoRoot" minHeight="256.0" minWidth="256.0" prefHeight="700.0"
-          prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.40"
-          fx:controller="com.faforever.client.chat.UserInfoWindowController">
+
+<GridPane fx:id="userInfoRoot" minHeight="256.0" minWidth="256.0" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.UserInfoWindowController">
   <columnConstraints>
-    <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
-    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
-    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+    <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints vgrow="NEVER"/>
-    <RowConstraints vgrow="NEVER"/>
-    <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+    <RowConstraints vgrow="NEVER" />
+    <RowConstraints vgrow="NEVER" />
+    <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
   </rowConstraints>
   <children>
     <Label fx:id="usernameLabel" text="&lt;Username&gt;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647">
       <font>
-        <Font size="32.0"/>
+        <Font size="32.0" />
       </font>
     </Label>
-    <Label fx:id="countryLabel" text="&lt;Country&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1"
-           GridPane.valignment="TOP">
+    <Label fx:id="countryLabel" text="&lt;Country&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP">
       <GridPane.margin>
-        <Insets left="5.0"/>
+        <Insets left="5.0" />
       </GridPane.margin>
       <graphic>
-        <ImageView fx:id="countryImageView" pickOnBounds="true" preserveRatio="true"/>
+        <ImageView fx:id="countryImageView" pickOnBounds="true" preserveRatio="true" />
       </graphic>
     </Label>
     <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
@@ -54,24 +59,20 @@
               <children>
                 <HBox alignment="TOP_RIGHT" spacing="10.0">
                   <children>
-                    <ToggleButton fx:id="ratingOver90DaysButton" mnemonicParsing="false"
-                                  onAction="#onRatingOver90DaysButtonClicked" selected="true"
-                                  text="%userInfo.ratingOverTime.last3Months">
+                    <ToggleButton fx:id="ratingOver90DaysButton" mnemonicParsing="false" onAction="#onRatingOver90DaysButtonClicked" selected="true" text="%userInfo.ratingOverTime.last3Months">
                       <toggleGroup>
-                        <ToggleGroup fx:id="timeRange"/>
+                        <ToggleGroup fx:id="timeRange" />
                       </toggleGroup>
                     </ToggleButton>
-                    <ToggleButton fx:id="ratingOver365DaysButton" mnemonicParsing="false"
-                                  onAction="#onRatingOver365DaysButtonClicked" text="%userInfo.ratingOverTime.lastYear"
-                                  toggleGroup="$timeRange"/>
+                    <ToggleButton fx:id="ratingOver365DaysButton" mnemonicParsing="false" onAction="#onRatingOver365DaysButtonClicked" text="%userInfo.ratingOverTime.lastYear" toggleGroup="$timeRange" />
                   </children>
                 </HBox>
                 <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false" VBox.vgrow="ALWAYS">
                   <xAxis>
-                    <NumberAxis fx:id="rating90DaysXAxis" side="BOTTOM"/>
+                    <NumberAxis fx:id="rating90DaysXAxis" side="BOTTOM" />
                   </xAxis>
                   <yAxis>
-                    <NumberAxis fx:id="rating90DaysYAxis" side="LEFT"/>
+                    <NumberAxis fx:id="rating90DaysYAxis" side="LEFT" />
                   </yAxis>
                 </LineChart>
               </children>
@@ -82,29 +83,28 @@
           <content>
             <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER">
               <content>
-                <VBox fx:id="achievementsLayout" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                      spacing="10.0">
+                <VBox fx:id="achievementsContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
                   <children>
-                    <Label fx:id="notUsingClientLabel" maxHeight="1.7976931348623157E308"
-                           text="%userInfo.notUsingClient" wrapText="true"/>
+                    <Label fx:id="notUsingClientLabel" maxHeight="1.7976931348623157E308" text="%userInfo.notUsingClient" wrapText="true" />
                     <VBox fx:id="noAchievementsLayout" alignment="CENTER" spacing="20.0" VBox.vgrow="ALWAYS">
                       <children>
-                        <Label fx:id="connectToGoogleLabel" maxHeight="1.7976931348623157E308"
-                               text="%userInfo.googleConnectionRequired" wrapText="true"/>
-                        <Button fx:id="connectToGoogleButton" focusTraversable="false" graphicTextGap="12.0"
-                                mnemonicParsing="false" onAction="#onConnectToGoogleButtonClicked"
-                                text="%currentUser.connectGoogle">
+                        <Label fx:id="connectToGoogleLabel" maxHeight="1.7976931348623157E308" text="%userInfo.googleConnectionRequired" wrapText="true" />
+                        <Button fx:id="connectToGoogleButton" focusTraversable="false" graphicTextGap="12.0" mnemonicParsing="false" onAction="#onConnectToGoogleButtonClicked" text="%currentUser.connectGoogle">
                           <graphic>
                             <ImageView fitHeight="36.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                               <image>
-                                <Image url="@images/google+.png"/>
+                                <Image url="@images/google+.png" />
                               </image>
                             </ImageView>
                           </graphic>
                         </Button>
                       </children>
                     </VBox>
+                              <VBox fx:id="achievementsContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
                   </children>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
                 </VBox>
               </content>
             </ScrollPane>
@@ -112,19 +112,18 @@
         </Tab>
       </tabs>
     </TabPane>
-    <Button mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowSpan="2"
-            GridPane.valignment="TOP">
+    <Button mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowSpan="2" GridPane.valignment="TOP">
       <graphic>
         <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
           <image>
-            <Image url="@images/add_friend.png"/>
+            <Image url="@images/add_friend.png" />
           </image>
         </ImageView>
       </graphic>
     </Button>
-    <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2"/>
+    <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2" />
   </children>
   <padding>
-    <Insets bottom="5.0" left="5.0" right="5.0" top="32.0"/>
+    <Insets bottom="5.0" left="5.0" right="5.0" top="32.0" />
   </padding>
 </GridPane>
