displaying most recent achievement (wip)

--- a/src/main/resources/themes/default/achievement_item.fxml
+++ b/src/main/resources/themes/default/achievement_item.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="achievementItemRoot" hgap="10.0" maxHeight="-Infinity"
-          maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+          maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="tile"
           xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.user.AchievementItemController">
   <columnConstraints>
     <ColumnConstraints hgrow="NEVER"/>
