--- a/src/main/resources/themes/default/achievement_item.fxml
+++ b/src/main/resources/themes/default/achievement_item.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="achievementItemRoot" hgap="10.0" maxHeight="-Infinity"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="achievementItemRoot" maxHeight="-Infinity"
           maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="tile"
           xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.user.AchievementItemController">
   <columnConstraints>
     <ColumnConstraints hgrow="NEVER"/>
-    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-    <ColumnConstraints hgrow="NEVER" minWidth="100.0"/>
+    <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0"/>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="80.0"/>
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
