--- a/src/main/resources/themes/default/user_info_window.fxml
+++ b/src/main/resources/themes/default/user_info_window.fxml
@@ -6,7 +6,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.ToggleButton?>
@@ -28,8 +30,8 @@
     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints vgrow="NEVER" />
-    <RowConstraints vgrow="NEVER" />
+    <RowConstraints minHeight="50.0" vgrow="NEVER"/>
+    <RowConstraints minHeight="50.0" vgrow="NEVER"/>
     <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
   </rowConstraints>
   <children>
@@ -46,7 +48,8 @@
         <ImageView fx:id="countryImageView" pickOnBounds="true" preserveRatio="true" />
       </graphic>
     </Label>
-    <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+    <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2"
+             GridPane.rowSpan="2147483647">
       <tabs>
         <Tab closable="false" text="%userInfo.ratingOverTime">
           <content>
@@ -64,10 +67,10 @@
                 </HBox>
                 <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false" VBox.vgrow="ALWAYS">
                   <xAxis>
-                    <NumberAxis fx:id="rating90DaysXAxis" side="BOTTOM" />
+                    <NumberAxis fx:id="rating90DaysXAxis" autoRanging="true" forceZeroInRange="false" side="BOTTOM"/>
                   </xAxis>
                   <yAxis>
-                    <NumberAxis fx:id="rating90DaysYAxis" side="LEFT" />
+                    <NumberAxis fx:id="rating90DaysYAxis" autoRanging="true" forceZeroInRange="false" side="LEFT"/>
                   </yAxis>
                 </LineChart>
               </children>
@@ -80,6 +83,13 @@
               <content>
                 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
                   <children>
+                    <Label fx:id="loadingProgressLabel" alignment="CENTER" contentDisplay="TOP" graphicTextGap="10.0"
+                           maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                           text="%achievements.loading" VBox.vgrow="ALWAYS">
+                      <graphic>
+                        <ProgressIndicator fx:id="loadingProgressIndicator" prefHeight="50.0" prefWidth="50.0"/>
+                      </graphic>
+                    </Label>
                     <Label fx:id="notUsingClientLabel" maxHeight="1.7976931348623157E308" text="%userInfo.notUsingClient" wrapText="true" />
                     <GridPane fx:id="mostRecentAchievementPane" hgap="20.0" VBox.vgrow="NEVER">
                       <columnConstraints>
@@ -94,8 +104,8 @@
                         <RowConstraints vgrow="NEVER"/>
                       </rowConstraints>
                       <children>
-                        <ImageView fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true"
-                                   GridPane.rowSpan="3"/>
+                        <ImageView fx:id="mostRecentAchievementImageView" fitHeight="128.0" fitWidth="128.0"
+                                   pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="3"/>
                         <Label text="%achievements.mostRecent" GridPane.columnIndex="1"/>
                         <Label fx:id="mostRecentAchievementNameLabel" styleClass="achievement-title" text="Label"
                                GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP"/>
@@ -104,12 +114,14 @@
                         <Label fx:id="achievementsProgressLabel" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                       </children>
                     </GridPane>
+                    <Separator prefWidth="200.0"/>
                     <VBox fx:id="notConnectedContainer" alignment="CENTER" spacing="20.0" VBox.vgrow="ALWAYS">
                       <children>
                         <Label maxHeight="1.7976931348623157E308" text="%userInfo.googleConnectionRequired"
                                wrapText="true"/>
-                        <Button focusTraversable="false" graphicTextGap="12.0" mnemonicParsing="false"
-                                onAction="#onConnectToGoogleButtonClicked" text="%currentUser.connectGoogle">
+                        <Button fx:id="connectGoogleButton" focusTraversable="false" graphicTextGap="12.0"
+                                mnemonicParsing="false" onAction="#onConnectToGoogleButtonClicked"
+                                text="%userInfo.connectGoogle">
                           <graphic>
                             <ImageView fitHeight="36.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                               <image>
@@ -121,11 +133,12 @@
                       </children>
                     </VBox>
                     <VBox fx:id="achievedAchievementsContainer" maxHeight="1.7976931348623157E308"
-                          maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS"/>
+                          maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS"/>
+                    <Separator prefWidth="200.0"/>
                     <VBox fx:id="availableAchievementsContainer" maxHeight="1.7976931348623157E308"
-                          maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                          maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
                       <VBox.margin>
-                        <Insets top="20.0"/>
+                        <Insets/>
                       </VBox.margin>
                     </VBox>
                   </children>
