--- a/src/main/resources/themes/default/map_preview_large.fxml
+++ b/src/main/resources/themes/default/map_preview_large.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="root" styleClass="map-preview-large"
-          xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.map.MapPreviewLargeController">
+          xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.map.MapDetailController">
   <columnConstraints>
     <ColumnConstraints />
     <ColumnConstraints />
