--- a/src/main/resources/themes/default/user_info_window.fxml
+++ b/src/main/resources/themes/default/user_info_window.fxml
@@ -21,17 +21,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="userInfoRoot" minHeight="256.0" minWidth="256.0" prefHeight="700.0"
-          prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.40"
-          fx:controller="com.faforever.client.chat.UserInfoWindowController">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="userInfoRoot" minHeight="256.0" minWidth="256.0" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.chat.UserInfoWindowController">
   <columnConstraints>
     <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="50.0" vgrow="NEVER"/>
-    <RowConstraints minHeight="50.0" vgrow="NEVER"/>
+    <RowConstraints minHeight="50.0" vgrow="NEVER" />
+    <RowConstraints minHeight="50.0" vgrow="NEVER" />
     <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
   </rowConstraints>
   <children>
@@ -48,8 +46,7 @@
         <ImageView fx:id="countryImageView" pickOnBounds="true" preserveRatio="true" />
       </graphic>
     </Label>
-    <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2"
-             GridPane.rowSpan="2147483647">
+    <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" GridPane.rowSpan="2147483647">
       <tabs>
         <Tab closable="false" text="%userInfo.ratingOverTime">
           <content>
@@ -67,10 +64,10 @@
                 </HBox>
                 <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false" VBox.vgrow="ALWAYS">
                   <xAxis>
-                    <NumberAxis fx:id="rating90DaysXAxis" autoRanging="true" forceZeroInRange="false" side="BOTTOM"/>
+                    <NumberAxis fx:id="rating90DaysXAxis" autoRanging="true" forceZeroInRange="false" side="BOTTOM" />
                   </xAxis>
                   <yAxis>
-                    <NumberAxis fx:id="rating90DaysYAxis" autoRanging="true" forceZeroInRange="false" side="LEFT"/>
+                    <NumberAxis fx:id="rating90DaysYAxis" autoRanging="true" forceZeroInRange="false" side="LEFT" />
                   </yAxis>
                 </LineChart>
               </children>
@@ -83,50 +80,57 @@
               <content>
                 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
                   <children>
-                    <Label fx:id="loadingProgressLabel" alignment="CENTER" contentDisplay="TOP" graphicTextGap="10.0"
-                           maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                           text="%achievements.loading" VBox.vgrow="ALWAYS">
+                    <Label fx:id="loadingProgressLabel" alignment="CENTER" contentDisplay="TOP" graphicTextGap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%achievements.loading" VBox.vgrow="ALWAYS">
                       <graphic>
-                        <ProgressIndicator fx:id="loadingProgressIndicator" prefHeight="50.0" prefWidth="50.0"/>
+                        <ProgressIndicator fx:id="loadingProgressIndicator" prefHeight="50.0" prefWidth="50.0" />
                       </graphic>
                     </Label>
                     <Label fx:id="notUsingClientLabel" maxHeight="1.7976931348623157E308" text="%userInfo.notUsingClient" wrapText="true" />
                     <GridPane fx:id="mostRecentAchievementPane" hgap="20.0" VBox.vgrow="NEVER">
                       <columnConstraints>
-                        <ColumnConstraints hgrow="NEVER"/>
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="NEVER" />
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                       </columnConstraints>
                       <rowConstraints>
-                        <RowConstraints vgrow="NEVER"/>
-                        <RowConstraints vgrow="NEVER"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                        <RowConstraints vgrow="NEVER"/>
-                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER" />
+                        <RowConstraints vgrow="NEVER" />
+                                    <RowConstraints vgrow="NEVER" />
+                        <RowConstraints vgrow="ALWAYS" />
+                        <RowConstraints vgrow="NEVER" />
+                        <RowConstraints vgrow="NEVER" />
                       </rowConstraints>
                       <children>
-                        <ImageView fx:id="mostRecentAchievementImageView" fitHeight="128.0" fitWidth="128.0"
-                                   pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="3"/>
-                        <Label text="%achievements.mostRecent" GridPane.columnIndex="1"/>
-                        <Label fx:id="mostRecentAchievementNameLabel" styleClass="achievement-title" text="Label"
-                               GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP"/>
-                        <ProgressBar maxWidth="1.7976931348623157E308" progress="0.0" GridPane.columnSpan="2147483647"
-                                     GridPane.rowIndex="4"/>
-                        <Label fx:id="achievementsProgressLabel" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                        <ImageView fx:id="mostRecentAchievementImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="4" />
+                        <Label text="%achievements.mostRecent" GridPane.columnIndex="1" />
+                        <Label fx:id="mostRecentAchievementNameLabel" styleClass="achievement-title" text="&lt;Title&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                        <ProgressBar maxWidth="1.7976931348623157E308" progress="0.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
+                        <Label fx:id="achievementsProgressLabel" text="&lt;Unlocked %&gt;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <Label fx:id="mostRecentAchievementDescriptionLabel" text="&lt;Description&gt;" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP" />
                       </children>
                     </GridPane>
-                    <Separator prefWidth="200.0"/>
-                    <VBox fx:id="achievedAchievementsContainer" maxHeight="1.7976931348623157E308"
-                          maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS"/>
-                    <Separator prefWidth="200.0"/>
-                    <VBox fx:id="availableAchievementsContainer" maxHeight="1.7976931348623157E308"
-                          maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
+                              <HBox alignment="CENTER" spacing="10.0">
+                                 <children>
+                          <Separator HBox.hgrow="ALWAYS" />
+                                    <Label styleClass="h1" text="%achievements.unlocked" />
+                                    <Separator HBox.hgrow="ALWAYS" />
+                                 </children>
+                              </HBox>
+                    <VBox fx:id="achievedAchievementsContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS" />
+                              <HBox alignment="CENTER" spacing="10.0">
+                                 <children>
+                                    <Separator HBox.hgrow="ALWAYS" />
+                                    <Label styleClass="h1" text="%achievements.open" />
+                                    <Separator HBox.hgrow="ALWAYS" />
+                                 </children>
+                              </HBox>
+                    <VBox fx:id="availableAchievementsContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
                       <VBox.margin>
-                        <Insets/>
+                        <Insets />
                       </VBox.margin>
                     </VBox>
                   </children>
                   <padding>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                   </padding>
                 </VBox>
               </content>
