--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -8,7 +8,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
-<Tab fx:id="channelTabRoot" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.ChannelTabController">
+<Tab xmlns:fx="http://javafx.com/fxml/1" fx:id="channelTabRoot" xmlns="http://javafx.com/javafx/8.0.40"
+     fx:controller="com.faforever.client.chat.ChannelTabController">
   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
     <children>
       <SplitPane dividerPositions="0.9" focusTraversable="false" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
@@ -40,8 +41,9 @@
                           <VBox fx:id="othersPane" minWidth="0.0" styleClass="channel-tab-others-users"/>
                         </content>
                       </TitledPane>
-                      <TitledPane fx:id="ircTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  minWidth="0.0" styleClass="channel-tab-irc-title" text="%chat.category.irc">
+                      <TitledPane fx:id="chatOnlyTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
+                                  minWidth="0.0" styleClass="channel-tab-chat-only-title"
+                                  text="%chat.category.chatOnly">
                         <content>
                           <VBox fx:id="chatOnlyPane" minWidth="0.0" styleClass="channel-tab-irc-users"/>
                         </content>
