--- a/src/main/resources/themes/default/games_table.fxml
+++ b/src/main/resources/themes/default/games_table.fxml
@@ -14,7 +14,7 @@
     <TableColumn fx:id="ratingColumn" minWidth="2.0" text="%game.rating"/>
     <TableColumn fx:id="modsColumn" minWidth="2.0" text="%game.mods"/>
     <TableColumn fx:id="hostColumn" minWidth="2.0" text="%game.host"/>
-    <TableColumn fx:id="accessColumn" minWidth="2.0" text="%game.access"/>
+    <TableColumn fx:id="passwordColumn" minWidth="2.0" text="%game.access"/>
   </columns>
   <columnResizePolicy>
     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
